--- a/assests/style.css
+++ b/assests/style.css
@@ -275,16 +275,18 @@ img {
     hsla(0, 0%, 12%, 0.5) 0%,
     #1f1f1f 100%
   );
-  
+  color: #656262;
 }
 .about__container {
   row-gap: 2rem;
   text-align: center;
   background-color: rgba(170, 179, 175, 0.422);
+  color: #656262;
 }
 
 .about__subtitle {
   margin-bottom: var(--mb-2);
+  color: #656262;
 }
 
 .about__img {
@@ -304,11 +306,12 @@ img {
     hsla(0, 1%, 65%, 0.5) 0%,
     #392e2e 100%
   );
+  color: #656262;
 }
 .skills__container {
   row-gap: 2rem;
   text-align: center;
-
+  color: #656262;
 }
 
 .skills__subtitle {
